--- a/public/signup.html
+++ b/public/signup.html
@@ -5,6 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Create New Account | File Management System</title>
         <link rel="stylesheet" href="./css/index.css" />
+        <!-- Favicon -->
+        <link
+            rel="icon"
+            type="image/ico"
+            sizes="512x512"
+            href="favicons/favicon.ico"
+        />
+        <link rel="manifest" href="site.webmanifest.json" />
     </head>
     <body>
         <div class="container">
