--- a/public/file-manager.html
+++ b/public/file-manager.html
@@ -73,26 +73,35 @@
                         placeholder="Enter New Filename"
                     />
                     <button class="rename-btn">
-                        <div class="loader"></div>
-                        <span class="loading">Rename File</span>
+                        <div id="loader"></div>
+                        <span id="loading">Rename File</span>
                     </button>
                 </div>
                 <h3>Your Files And Folders</h3>
                 <div class="file-list">
+                    <!--
                     <div class="col">
                         <div class="option-menu">
                             <button class="close-option">X</button>
-                            <span class="open-file"><img src="icons/open.png" />Open File</span>
-                            <span class="rename-file"><img src="icons/new-document.png" />Rename File</span>
+                            <span class="open-file"
+                                ><img src="icons/open.png" />Open File</span
+                            >
+                            <span class="rename-file"
+                                ><img src="icons/new-document.png" />Rename
+                                File</span
+                            >
                             <span class="download-file">
                                 <img src="icons/download.png" />
-                                Download File</span>
+                                Download File</span
+                            >
                             <span class="share-file">
                                 <img src="icons/share.png" />
-                                Share File</span>
+                                Share File</span
+                            >
                             <span class="delete-file">
                                 <img src="icons/delete.png" />
-                                Delete File</span>
+                                Delete File</span
+                            >
                         </div>
                         <img src="/icons/client.jpg" />
                         <div class="file-info">
@@ -106,157 +115,11 @@
                         </div>
                         <button class="option">...</button>
                     </div>
-                    <div class="col">
-                        <div class="option-menu">
-                            <button class="close-option">X</button>
-                            <span>Open File</span>
-                            <span>Rename File</span>
-                            <span>Download File</span>
-                            <span>Share File</span>
-                            <span>Delete File</span>
-                        </div>
-                        <img src="/icons/client.jpg" />
-                        <div class="file-info">
-                            <span
-                                >Our Main Client message with our new and
-                                with</span
-                            >
-                            <span>Author : Ghs Julian</span>
-                            <span>Uploaded : 05/05/2025</span>
-                            <span>File Type : JPG</span>
-                        </div>
-                        <button class="option">...</button>
-                    </div>
-                    <div class="col">
-                        <div class="option-menu">
-                            <button class="close-option">X</button>
-                            <span>Open File</span>
-                            <span>Rename File</span>
-                            <span>Download File</span>
-                            <span>Share File</span>
-                            <span>Delete File</span>
-                        </div>
-                        <img src="/icons/client.jpg" />
-                        <div class="file-info">
-                            <span
-                                >Our Main Client message with our new and
-                                with</span
-                            >
-                            <span>Author : Ghs Julian</span>
-                            <span>Uploaded : 05/05/2025</span>
-                            <span>File Type : JPG</span>
-                        </div>
-                        <button class="option">...</button>
-                    </div>
-                    <div class="col">
-                        <div class="option-menu">
-                            <button class="close-option">X</button>
-                            <span>Open File</span>
-                            <span>Rename File</span>
-                            <span>Download File</span>
-                            <span>Share File</span>
-                            <span>Delete File</span>
-                        </div>
-                        <img src="/icons/client.jpg" />
-                        <div class="file-info">
-                            <span
-                                >Our Main Client message with our new and
-                                with</span
-                            >
-                            <span>Author : Ghs Julian</span>
-                            <span>Uploaded : 05/05/2025</span>
-                            <span>File Type : JPG</span>
-                        </div>
-                        <button class="option">...</button>
-                    </div>
-                    <div class="col">
-                        <div class="option-menu">
-                            <button class="close-option">X</button>
-                            <span>Open File</span>
-                            <span>Rename File</span>
-                            <span>Download File</span>
-                            <span>Share File</span>
-                            <span>Delete File</span>
-                        </div>
-                        <img src="/icons/client.jpg" />
-                        <div class="file-info">
-                            <span
-                                >Our Main Client message with our new and
-                                with</span
-                            >
-                            <span>Author : Ghs Julian</span>
-                            <span>Uploaded : 05/05/2025</span>
-                            <span>File Type : JPG</span>
-                        </div>
-                        <button class="option">...</button>
-                    </div>
-                    <div class="col">
-                        <div class="option-menu">
-                            <button class="close-option">X</button>
-                            <span>Open File</span>
-                            <span>Rename File</span>
-                            <span>Download File</span>
-                            <span>Share File</span>
-                            <span>Delete File</span>
-                        </div>
-                        <img src="/icons/client.jpg" />
-                        <div class="file-info">
-                            <span
-                                >Our Main Client message with our new and
-                                with</span
-                            >
-                            <span>Author : Ghs Julian</span>
-                            <span>Uploaded : 05/05/2025</span>
-                            <span>File Type : JPG</span>
-                        </div>
-                        <button class="option">...</button>
-                    </div>
-                    <div class="col">
-                        <div class="option-menu">
-                            <button class="close-option">X</button>
-                            <span>Open File</span>
-                            <span>Rename File</span>
-                            <span>Download File</span>
-                            <span>Share File</span>
-                            <span>Delete File</span>
-                        </div>
-                        <img src="/icons/client.jpg" />
-                        <div class="file-info">
-                            <span
-                                >Our Main Client message with our new and
-                                with</span
-                            >
-                            <span>Author : Ghs Julian</span>
-                            <span>Uploaded : 05/05/2025</span>
-                            <span>File Type : JPG</span>
-                        </div>
-                        <button class="option">...</button>
-                    </div>
-                    <div class="col">
-                        <div class="option-menu">
-                            <button class="close-option">X</button>
-                            <span>Open File</span>
-                            <span>Rename File</span>
-                            <span>Download File</span>
-                            <span>Share File</span>
-                            <span>Delete File</span>
-                        </div>
-                        <img src="/icons/client.jpg" />
-                        <div class="file-info">
-                            <span
-                                >Our Main Client message with our new and
-                                with</span
-                            >
-                            <span>Author : Ghs Julian</span>
-                            <span>Uploaded : 05/05/2025</span>
-                            <span>File Type : JPG</span>
-                        </div>
-                        <button class="option">...</button>
-                    </div>
+                    -->
                 </div>
             </div>
         </div>
+        <script type="module" src="js/fetch.all.files.js"></script>
         <script src="js/nav.js"></script>
-        <script src="js/ui.js"></script>
     </body>
 </html>
