Everything is working fine

--- a/public/file-manager.html
+++ b/public/file-manager.html
@@ -77,7 +77,30 @@
                         <span id="loading">Rename File</span>
                     </button>
                 </div>
-                <h3>Your Files And Folders</h3>
+                <div id="view-img" class="form">
+                    <button class="view-close-btn">X</button>
+                    <img id="view" src="/icons/bin.png" />
+                </div>
+                <div id="view-video" class="form">
+                    <button class="video-close">X</button>
+                    <video
+                        src=""
+                        id="video"
+                        controls="on"
+                        autoplay="on"
+                        height="250"
+                        width="320"
+                    ></video>
+                </div>
+                <div id="view-audio" class="form">
+                    <button class="audio-close">X</button>
+                    <audio
+                        src=""
+                        id="audio"
+                        controls="on"
+                        autoplay="on"
+                    ></audio>
+                </div>
                 <div class="file-list">
                     <!--
                     <div class="col">
